# github-actions-runner-orchestrator

./: .gitignore  AGENTS.md  Cargo.toml  DEFERRED.md  README.md  flake.nix
.github/workflows/: ci.yml
host-setup/linux-builder/: README.md  install-launchd.sh  install.sh  known_hosts  launchd-agent.plist  machines  ssh_config  start-builder.sh
host-setup/mac-cache/: README.md  common.sh  init-cache.sh  serve-cache.sh  setup-server.sh  test-cache.sh  test-warm-lock.sh  warm-cache.sh  warm-flake-inputs.sh
host-setup/mac-cache-s3/: HANDOFF.md  README.md  common.sh  serve-s3.sh  setup-server.sh  test-s3.sh
lima/: build-nixos-image.sh  build-prebuilt-image.sh  runner-aarch64.yaml
nix/: guest.nix
src/: config.rs  control.rs  gc.rs  main.rs  runner.rs  spool.rs  supervisor.rs  warm.rs
src/github/: app_jwt.rs  event.rs  installation.rs  jit.rs  mod.rs
src/lima/: mod.rs
src/web/: app.js  index.html
