[package]
name = "gh-actions-consumer"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "gh-actions-consumer"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "fs", "process", "io-util", "net", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = { version = "10", default-features = false, features = ["use_pem"] }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
notify = "6"
anyhow = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
libc = "0.2"
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
