[package]
name = "gh-actions-consumer"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "gh-actions-consumer"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "fs", "process", "io-util", "net", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# rust_crypto selects jsonwebtoken's pure-Rust RSA backend. Without exactly one
# of rust_crypto / aws_lc_rs, jsonwebtoken 10.x panics at *runtime* on the first
# sign because it can't resolve a CryptoProvider. rust_crypto keeps us off the
# aws-lc-rs C/asm build, matching the rustls (pure-Rust) TLS choice.
jsonwebtoken = { version = "10", default-features = false, features = ["use_pem", "rust_crypto"] }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
notify = "6"
anyhow = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
libc = "0.2"
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
